rendering keyboard from keymap

--- a/keyboard-feb22.framer/.temp.html
+++ b/keyboard-feb22.framer/.temp.html
@@ -20,12 +20,15 @@
 		<link rel="apple-touch-icon" href="framer/images/icon-120.png" sizes="120x120">
 		<link rel="apple-touch-icon" href="framer/images/icon-152.png" sizes="152x152">
 
-		<link rel="stylesheet" type="text/css" href="framer/style.css?nocache=1424710572.355352">
+        <link href="public/lib/fontawesome/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+		<link rel="stylesheet" type="text/css" href="framer/style.css?nocache=1424842932.187966">
 
 		<script src="framer/coffee-script.js"></script>
-		<script src="framer/framer.js?nocache=1424710572.355396"></script>
-		<script src="framer/framer.generated.js?nocache=1424710572.355296"></script>
+		<script src="framer/framer.js?nocache=1424842932.188036"></script>
+		<script src="framer/framer.generated.js?nocache=1424842932.187886"></script>
 		<script src="framer/init.js"></script>
+        <script src="keymap.js"></script>
 
 	</head>
 	<body>
