--- a/keyboard-feb22.framer/index.html
+++ b/keyboard-feb22.framer/index.html
@@ -20,12 +20,15 @@
 		<link rel="apple-touch-icon" href="framer/images/icon-120.png" sizes="120x120">
 		<link rel="apple-touch-icon" href="framer/images/icon-152.png" sizes="152x152">
 
+        <link href="public/lib/fontawesome/css/font-awesome.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		<link rel="stylesheet" type="text/css" href="framer/style.css">
 
 		<script src="framer/coffee-script.js"></script>
 		<script src="framer/framer.js"></script>
 		<script src="framer/framer.generated.js"></script>
 		<script src="framer/init.js"></script>
+        <script src="keymap.js"></script>
 
 	</head>
 	<body>
