--- a/keyboard-feb22.framer/index.html
+++ b/keyboard-feb22.framer/index.html
@@ -23,6 +23,7 @@
         <link href="public/lib/fontawesome/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 		<link rel="stylesheet" type="text/css" href="framer/style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
 
 		<script src="framer/coffee-script.js"></script>
 		<script src="framer/framer.js"></script>
