predictive button sizing + experiment results + analysis

--- a/keyboard-feb22.framer/public/index.html
+++ b/keyboard-feb22.framer/public/index.html
@@ -25,6 +25,7 @@
 		<link rel="stylesheet" type="text/css" href="framer/style.css">
         <link rel="stylesheet" type="text/css" href="style.css">
 
+        <script src="https://code.jquery.com/jquery-2.1.3.js"></script>
 		<script src="framer/coffee-script.js"></script>
 		<script src="framer/framer.js"></script>
 		<script src="framer/framer.generated.js"></script>
