--- a/keyboard-feb22.framer/public/index.html
+++ b/keyboard-feb22.framer/public/index.html
@@ -31,6 +31,7 @@
 		<script src="framer/framer.generated.js"></script>
 		<script src="framer/init.js"></script>
         <script src="keymap.js"></script>
+        <script src="bower/lodash/lodash.min.js"></script>
 
 	</head>
 	<body>
